# IncludeOS

./: CMakeLists.txt  arch-build.sh  install.sh
cmake/: cross_compiled_libraries.cmake  post.service.cmake
etc/: create_binary_bundle.sh  install_clang_version.sh  install_dependencies_linux.sh  install_from_bundle.sh
src/: CMakeLists.txt
src/arch/x86_64/: apic_longmode.asm  arch_start.asm
src/drivers/: CMakeLists.txt
src/musl/: CMakeLists.txt
src/posix/: stdio.cpp
